--- a/streammasterwebui/themes/streammaster/streammaster-base/_variables.scss
+++ b/streammasterwebui/themes/streammaster/streammaster-base/_variables.scss
@@ -10,7 +10,7 @@ $gridItem-margin: .15rem;
 $gridItem-image-height: $gridItem-height - ($gridItem-margin*2) - $input-height;
 $gridItem-image-width: $gridItem-width - ($gridItem-margin*2);
 
-$common-font-size: small;
+$common-font-size: 0.75rem;
 $input-save-color: green;
 $streamMasterColor: #fe7600 !default;
 
