--- a/streammasterwebui/themes/streammaster/theme-base/components/input/_chips.scss
+++ b/streammasterwebui/themes/streammaster/theme-base/components/input/_chips.scss
@@ -88,7 +88,7 @@
             input {
                 font-family: var(--font-family);
                 font-feature-settings: var(--font-feature-settings, normal);
-                font-size: $inputTextFontSize;
+                font-size: $common-font-size;
                 color: $textColor;
                 padding: 0;
                 margin: 0;
@@ -96,7 +96,7 @@
         }
     }
 
-    &.p-invalid.p-component > .p-inputtext {
+    &.p-invalid.p-component>.p-inputtext {
         @include invalid-input();
     }
 }
