--- a/streammasterwebui/themes/streammaster/theme-base/components/misc/_terminal.scss
+++ b/streammasterwebui/themes/streammaster/theme-base/components/misc/_terminal.scss
@@ -7,6 +7,6 @@
 	.p-terminal-input {
 		font-family: var(--font-family);
 		font-feature-settings: var(--font-feature-settings, normal);
-		font-size: $inputTextFontSize;
+		font-size: $common-font-size;
 	}
 }
