--- a/streammasterwebui/themes/streammaster/streammaster-base/components/multimedia/_image.scss
+++ b/streammasterwebui/themes/streammaster/streammaster-base/components/multimedia/_image.scss
@@ -22,7 +22,7 @@
 
 .icon-template img,
 .default-icon {
-  max-width: 1rem; //$gridItem-width;
+  max-width: $gridItem-width;
   max-height: 1.3rem;
   object-fit: contain;
 }
