--- a/streammasterwebui/public/themes/streammaster-dark/theme.css
+++ b/streammasterwebui/public/themes/streammaster-dark/theme.css
@@ -6957,8 +6957,8 @@
 }
 .p-datatable .p-datatable-tbody > tr > td {
   padding: 0.1rem 0;
-  height: 1.8rem;
-  max-height: 1.8rem;
+  /* height: 1.8rem; */
+  /* max-height: 1.8rem; */
 }
 .p-datatable .p-datatable-thead > tr:nth-child(1) {
   display: none;
@@ -7207,7 +7207,7 @@
 
 .icon-template img,
 .default-icon {
-  max-width: 1rem;
+  max-width: 4rem;
   max-height: 1.3rem;
   object-fit: contain;
 }
